// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/meta-refresh.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/meta-refresh.md inline validation: incorrect-delay 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 37,
        "context": undefined,
        "line": 1,
        "message": "Meta refresh must use 0 second delay",
        "offset": 36,
        "ruleId": "meta-refresh",
        "severity": 2,
        "size": 17,
      },
    ],
    "source": "<meta http-equiv=\\"refresh\\" content=\\"5;url=target.html\\">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/meta-refresh.md inline validation: incorrect-url 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 37,
        "context": undefined,
        "line": 1,
        "message": "Don't use meta refresh to reload the page",
        "offset": 36,
        "ruleId": "meta-refresh",
        "severity": 2,
        "size": 1,
      },
    ],
    "source": "<meta http-equiv=\\"refresh\\" content=\\"0\\">",
    "warningCount": 0,
  },
]
`;
